improve UI + add issue rendering

--- a/annotation/index.html
+++ b/annotation/index.html
@@ -123,6 +123,16 @@
                     <div id="issue-body-content"></div>
                 </div>
 
+                <div class="issue-comments">
+                    <div class="comments-header">
+                        <h3>Comments</h3>
+                        <div class="comments-count" id="comments-count"></div>
+                    </div>
+                    <div id="comments-container" class="comments-container">
+                        <div class="loading">Loading comments...</div>
+                    </div>
+                </div>
+
                 <div class="github-preview">
                     <div class="preview-header">
                         <h3>GitHub Issue Preview</h3>
