add commit id / link PR

--- a/annotation/index.html
+++ b/annotation/index.html
@@ -157,6 +157,11 @@
                     <input type="text" id="version-input" placeholder="version when bug">
                 </div>
 
+                <div class="version-field">
+                    <h4>Commit ID / PR Link</h4>
+                    <input type="text" id="commit-input" placeholder="Enter commit ID or PR link...">
+                </div>
+
                 <div class="selected-labels">
                     <h4>Selected Labels</h4>
                     <div id="selected-labels" class="labels-container"></div>
